--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,8 @@ python-multipart==0.0.6
 pdf2image==1.16.3
 pytesseract==0.3.10
 Pillow==10.1.0
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==3.2.2
+email-validator==2.1.0
 
